test/files_test/errors/modulo_by_zero.scm
; Test: Modulo by zero - should return exit code 84
(mod 10 0)
